{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 94,
  "lineage": "760f23a5-d643-eebb-5ad6-f31d770df6ac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01029392551bf098c",
            "arn": "arn:aws:ec2:us-east-1:446242970357:elastic-ip/eipalloc-01029392551bf098c",
            "domain": "vpc",
            "id": "eipalloc-01029392551bf098c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-70-213-16.compute-1.amazonaws.com",
            "public_ip": "52.70.213.16",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "hospital-boxes-nat-eip"
            },
            "tags_all": {
              "Name": "hospital-boxes-nat-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "django_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c398cb65a93047f2",
            "arn": "arn:aws:ec2:us-east-1:446242970357:instance/i-0dd21847ac7dbc3e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hospital-boxes-lab-instance-profile",
            "id": "i-0dd21847ac7dbc3e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09c03a3145b02ad1e"
              }
            ],
            "primary_network_interface_id": "eni-09c03a3145b02ad1e",
            "private_dns": "ip-10-0-1-185.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.185",
            "public_dns": "ec2-3-88-182-164.compute-1.amazonaws.com",
            "public_ip": "3.88.182.164",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a143d9143474bc39",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02626d64f9dd6cb40",
            "tags": {
              "Name": "hospital-boxes-django-server"
            },
            "tags_all": {
              "Name": "hospital-boxes-django-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cb9ecde6bd2d91a8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446242970357",
            "id": "i-0dd21847ac7dbc3e2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.lab_instance_profile",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.aws_iam_role.lab_role"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446242970357:internet-gateway/igw-078cfa18a80e1ec1b",
            "id": "igw-078cfa18a80e1ec1b",
            "owner_id": "446242970357",
            "region": "us-east-1",
            "tags": {
              "Name": "hospital-boxes-igw"
            },
            "tags_all": {
              "Name": "hospital-boxes-igw"
            },
            "vpc_id": "vpc-000e5f85e40d2480a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01029392551bf098c",
            "association_id": "eipassoc-099fc50b7a9b8532b",
            "connectivity_type": "public",
            "id": "nat-081700e124fd73f92",
            "network_interface_id": "eni-039b891a88a706661",
            "private_ip": "10.0.1.96",
            "public_ip": "52.70.213.16",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-02626d64f9dd6cb40",
            "tags": {
              "Name": "hospital-boxes-nat"
            },
            "tags_all": {
              "Name": "hospital-boxes-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "custom_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02c0d67518e5600231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-081700e124fd73f92",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-02c0d67518e560023",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446242970357",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-02c0d67518e560023"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.custom",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02384a6affa28b3201080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-081700e124fd73f92",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-02384a6affa28b320",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446242970357",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-02384a6affa28b320"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446242970357:route-table/rtb-02c0d67518e560023",
            "id": "rtb-02c0d67518e560023",
            "owner_id": "446242970357",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "hospital-boxes-custom-rt"
            },
            "tags_all": {
              "Name": "hospital-boxes-custom-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-000e5f85e40d2480a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446242970357",
            "id": "rtb-02c0d67518e560023",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446242970357:route-table/rtb-02384a6affa28b320",
            "id": "rtb-02384a6affa28b320",
            "owner_id": "446242970357",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "hospital-boxes-private-rt"
            },
            "tags_all": {
              "Name": "hospital-boxes-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-000e5f85e40d2480a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446242970357",
            "id": "rtb-02384a6affa28b320",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446242970357:route-table/rtb-0c3b3b69d70660bf9",
            "id": "rtb-0c3b3b69d70660bf9",
            "owner_id": "446242970357",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-078cfa18a80e1ec1b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hospital-boxes-public-rt"
            },
            "tags_all": {
              "Name": "hospital-boxes-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-000e5f85e40d2480a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446242970357",
            "id": "rtb-0c3b3b69d70660bf9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd25d025610a9566",
            "region": "us-east-1",
            "route_table_id": "rtb-02c0d67518e560023",
            "subnet_id": "subnet-0ba0c78a221559457"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.custom",
            "aws_subnet.custom",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0280ba85a30f42c88",
            "region": "us-east-1",
            "route_table_id": "rtb-02384a6affa28b320",
            "subnet_id": "subnet-0cee0e739552ab2a8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d423d94a0b4d13e",
            "region": "us-east-1",
            "route_table_id": "rtb-0c3b3b69d70660bf9",
            "subnet_id": "subnet-02626d64f9dd6cb40"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446242970357:security-group/sg-0cb9ecde6bd2d91a8",
            "description": "Allow HTTP, HTTPS, and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cb9ecde6bd2d91a8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Django application access",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "hospital-boxes-ec2-sg",
            "name_prefix": "",
            "owner_id": "446242970357",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hospital-boxes-ec2-sg"
            },
            "tags_all": {
              "Name": "hospital-boxes-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-000e5f85e40d2480a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446242970357",
            "id": "sg-0cb9ecde6bd2d91a8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "custom",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446242970357:subnet/subnet-0ba0c78a221559457",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba0c78a221559457",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446242970357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Course": "Arquitectura de Sistemas",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hospital-boxes-dev-custom-subnet",
              "Project": "Hospital Boxes Visualization",
              "Team": "DevOps",
              "University": "UDD"
            },
            "tags_all": {
              "Course": "Arquitectura de Sistemas",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hospital-boxes-dev-custom-subnet",
              "Project": "Hospital Boxes Visualization",
              "Team": "DevOps",
              "University": "UDD"
            },
            "vpc_id": "vpc-000e5f85e40d2480a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446242970357",
            "id": "subnet-0ba0c78a221559457",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446242970357:subnet/subnet-0cee0e739552ab2a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cee0e739552ab2a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "446242970357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Course": "Arquitectura de Sistemas",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hospital-boxes-dev-private-subnet",
              "Project": "Hospital Boxes Visualization",
              "Team": "DevOps",
              "University": "UDD"
            },
            "tags_all": {
              "Course": "Arquitectura de Sistemas",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hospital-boxes-dev-private-subnet",
              "Project": "Hospital Boxes Visualization",
              "Team": "DevOps",
              "University": "UDD"
            },
            "vpc_id": "vpc-000e5f85e40d2480a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446242970357",
            "id": "subnet-0cee0e739552ab2a8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446242970357:subnet/subnet-02626d64f9dd6cb40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02626d64f9dd6cb40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "446242970357",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Course": "Arquitectura de Sistemas",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hospital-boxes-dev-public-subnet",
              "Project": "Hospital Boxes Visualization",
              "Team": "DevOps",
              "University": "UDD"
            },
            "tags_all": {
              "Course": "Arquitectura de Sistemas",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hospital-boxes-dev-public-subnet",
              "Project": "Hospital Boxes Visualization",
              "Team": "DevOps",
              "University": "UDD"
            },
            "vpc_id": "vpc-000e5f85e40d2480a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446242970357",
            "id": "subnet-02626d64f9dd6cb40",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446242970357:vpc/vpc-000e5f85e40d2480a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-084e8248fb10498f2",
            "default_route_table_id": "rtb-0ed863db604b0d123",
            "default_security_group_id": "sg-0aa45517dafa22115",
            "dhcp_options_id": "dopt-08cb859d85d5a027c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-000e5f85e40d2480a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed863db604b0d123",
            "owner_id": "446242970357",
            "region": "us-east-1",
            "tags": {
              "Course": "Arquitectura de Sistemas",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hospital-boxes-dev-vpc",
              "Project": "Hospital Boxes Visualization",
              "Team": "DevOps",
              "University": "UDD"
            },
            "tags_all": {
              "Course": "Arquitectura de Sistemas",
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "hospital-boxes-dev-vpc",
              "Project": "Hospital Boxes Visualization",
              "Team": "DevOps",
              "University": "UDD"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446242970357",
            "id": "vpc-000e5f85e40d2480a",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:446242970357:vpc-endpoint/vpce-0918ca26dfee4e4f9",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0918ca26dfee4e4f9",
            "ip_address_type": "ipv4",
            "owner_id": "446242970357",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-02384a6affa28b320",
              "rtb-02c0d67518e560023",
              "rtb-0c3b3b69d70660bf9"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "service_region": "us-east-1",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-000e5f85e40d2480a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "446242970357",
            "id": "vpce-0918ca26dfee4e4f9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.custom",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}